--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2135,6 +2135,7 @@ input, select, textarea {
 
 		.image.avatar {
 			border-radius: 100%;
+			object-fit: cover;
 		}
 
 			.image.avatar:before {
