--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2145,6 +2145,7 @@ input, select, textarea {
 			.image.avatar img {
 				border-radius: 100%;
 				width: 100%;
+				object-fit: cover;
 			}
 
 /* List */
